--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@ body {
   text-align: right;
 }
 
-.header img {
+.logo {
   width: 100%;
 }
 
-.header .more-inf {
+.more-inf {
   font-family: fantasy, cursive;
 }
 
@@ -106,8 +106,9 @@ label[for="new-task"] {
   margin: 0 0 20px;
 }
 
-input#new-task {
+#new-task {
   width: 318px;
+  display: inline-block;
 }
 
 /* Task list */
@@ -124,46 +125,46 @@ li>* {
   vertical-align: middle;
 }
 
-li>input[type="checkbox"] {
+input[type="checkbox"] {
   margin: 0 10px;
 }
 
-li>label {
+label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li>input[type="text"] {
+input[type="text"] {
   width: 226px
 }
 
-button.delete img {
+.remove  {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.remove:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.complete-task {
   text-decoration: line-through color: #888;
 }
 
 /* Edit Task */
-ul li input[type="text"] {
+input[type="text"] {
   display: none
 }
 
-ul li.edit-mode input[type="text"] {
+.edit-mode input[type="text"] {
   display: inline-block;
   width: 224px
 }
 
-ul li.edit-mode label {
+.edit-mode label {
   display: none;
 }
