--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .task-row-wrapper {
@@ -137,7 +137,7 @@ label {
 }
 
 input[type="text"] {
-  width: 226px
+  width: 226px;
 }
 
 .remove  {
@@ -152,17 +152,17 @@ input[type="text"] {
 
 /* Completed */
 .complete-task {
-  text-decoration: line-through color: #888;
+  text-decoration: line-through; color: #888;
 }
 
 /* Edit Task */
 input[type="text"] {
-  display: none
+  display: none;
 }
 
 .edit-mode input[type="text"] {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .edit-mode label {
