--- a/style.css
+++ b/style.css
@@ -152,7 +152,8 @@ input[type="text"] {
 
 /* Completed */
 .complete-task {
-  text-decoration: line-through; color: #888;
+  text-decoration: line-through;
+  color: #888;
 }
 
 /* Edit Task */
